[package]
name = "coding_problmes"
version = "0.1.0"
authors = ["Ruben Villalvazo <ruben.villalvazo_manr@hotmail.com>"]
edition = "2021"
repository = "https://github.com/rubenVillalvazo/coding_problmes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
